[package]
name = "nat-type-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
bincode = "1.3.3"
clap  = { version = "3.2.17", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.17"
rand = "0.8.5"
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros", "net", "time", "io-util"] }
